<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmartMirror</string>

    <!--  TESTING('TEST') OR DEVELOPMENT ENVIRONMENT('DEV')  -->
    <string name="env">DEV</string>

    <string name="open_nav_drawer">OPEN_NAV_BAR</string>
    <string name="close_nav_drawer">CLOSE_NAV_BAR</string>

    <string name="general_configurations">GENERAL CONFIGURATIONS</string>
    <string name="news_interests">News interests</string>
    <string name="location_information">Location information</string>

    <string name="emotional_configurations">EMOTIONAL CONFIGURATIONS</string>
    <string name="happy">Happy</string>
    <string name="neutral">Neutral</string>
    <string name="sad">Sad</string>

    <string name="account">ACCOUNT</string>
    <string name="setup_face_recognition">Setup face recognition</string>
    <string name="title">SmartMirror</string>
    <string name="created_by_gayanga_kuruppu">Created by Gayanga Kuruppu</string>
    <string name="logout">Logout</string>
    <string name="select_images_and_configure">Select Images and Configure</string>
    <string name="capture_images">Capture Images</string>


    <string name="to_configure_description">To configure facial recognition, first capture 10 images of your face. Then select captured images</string>
    <string name="location_configure_description">Please select the city you are located in for us to provide accurate weather information</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_custom_feed">Add Custom Feed</string>
    <string name="description">Description</string>
    <string name="twitter_handle">Twitter Handle</string>
    <string name="twitter_info">Feel free to add a custom twitter feed of your choice. Don\'t forget to enable the feed in emotion configurations later</string>
    <string name="sm_info">Hello! Welcome to the SmartMirror mobile application. Your one stop shop for customizing your SmartMirror device.</string>
    <string name="cal_info">You can sync your Google Calendar events with SmartMirror and get alerts!</string>
    <string name="sync_calendar">Sync Calendar</string>
    <string name="smartmirror">SmartMirror</string>

</resources>